# Weighted-Hierarchical-QP

./: 00__basic__select_8cpp.html  00__basic__select_8cpp__incl.map  00__basic__select_8cpp__incl.md5  00__basic__select_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.map  00__basic__select_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  01__metric__swap_8cpp.html  01__metric__swap_8cpp__incl.map  01__metric__swap_8cpp__incl.md5  01__metric__swap_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.map  01__metric__swap_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  02__compare__solvers_8cpp.html  02__compare__solvers_8cpp__incl.map  02__compare__solvers_8cpp__incl.md5  03__set__stack_8cpp.html  03__set__stack_8cpp__incl.map  03__set__stack_8cpp__incl.md5  04__random__problem_8cpp.html  04__random__problem_8cpp__incl.map  04__random__problem_8cpp__incl.md5  04__random__problem_8cpp_abbfac764a8ef8631a7b19819cca07bbe_icgraph.map  04__random__problem_8cpp_abbfac764a8ef8631a7b19819cca07bbe_icgraph.md5  04__random__problem_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.map  04__random__problem_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  README_8md.html  afterdoc_8h.html  afterdoc_8h_source.html  annotated.html  author_8cpp.html  autolink_8cpp.html  bug.html  classA-members.html  classA.html  classAfterdoc__Test-members.html  classAfterdoc__Test.html  classAutolink__Test-members.html  (+417 more)
dev/: extra.cpp  hqp.hpp  test1.cpp  test2.cpp
doc/: CMakeLists.txt  Doxyfile
hqp/: hqp.cpp  hqp.hpp  library.cpp  library.hpp  task.cpp  task.hpp
html/: README_8md.html  annotated.html  classes.html  classhqp_1_1HierarchicalQP-members.html  classhqp_1_1HierarchicalQP.html  classhqp_1_1HierarchicalQP_a126f16766c7f830ac0b5778a9ea4b7c2_icgraph.map  classhqp_1_1HierarchicalQP_a126f16766c7f830ac0b5778a9ea4b7c2_icgraph.md5  classhqp_1_1HierarchicalQP_a292d98f5d69d3666a895d6a95e5dc6b9_cgraph.map  classhqp_1_1HierarchicalQP_a292d98f5d69d3666a895d6a95e5dc6b9_cgraph.md5  classhqp_1_1HierarchicalQP_a292d98f5d69d3666a895d6a95e5dc6b9_icgraph.map  classhqp_1_1HierarchicalQP_a292d98f5d69d3666a895d6a95e5dc6b9_icgraph.md5  classhqp_1_1HierarchicalQP_a7f754bcfa36f0f97fd9063ad079940e9_icgraph.map  classhqp_1_1HierarchicalQP_a7f754bcfa36f0f97fd9063ad079940e9_icgraph.md5  classhqp_1_1HierarchicalQP_aae5aaeddac67302f310f34bfa3eb66c4_cgraph.map  classhqp_1_1HierarchicalQP_aae5aaeddac67302f310f34bfa3eb66c4_cgraph.md5  classhqp_1_1HierarchicalQP_aae5aaeddac67302f310f34bfa3eb66c4_icgraph.map  classhqp_1_1HierarchicalQP_aae5aaeddac67302f310f34bfa3eb66c4_icgraph.md5  classhqp_1_1HierarchicalQP_aaf6df9e4aa247e25e1ff253bd6501028_cgraph.map  classhqp_1_1HierarchicalQP_aaf6df9e4aa247e25e1ff253bd6501028_cgraph.md5  classhqp_1_1HierarchicalQP_aaf6df9e4aa247e25e1ff253bd6501028_icgraph.map  classhqp_1_1HierarchicalQP_aaf6df9e4aa247e25e1ff253bd6501028_icgraph.md5  classhqp_1_1HierarchicalQP_adac78a9cc96e9d4f311b9ef72acd7ebd_cgraph.map  classhqp_1_1HierarchicalQP_adac78a9cc96e9d4f311b9ef72acd7ebd_cgraph.md5  classhqp_1_1HierarchicalQP_adac78a9cc96e9d4f311b9ef72acd7ebd_icgraph.map  classhqp_1_1HierarchicalQP_adac78a9cc96e9d4f311b9ef72acd7ebd_icgraph.md5  classhqp_1_1HierarchicalQP_add4448ad1c21585e607457463016a027_cgraph.map  classhqp_1_1HierarchicalQP_add4448ad1c21585e607457463016a027_cgraph.md5  classhqp_1_1HierarchicalQP_add4448ad1c21585e607457463016a027_icgraph.map  classhqp_1_1HierarchicalQP_add4448ad1c21585e607457463016a027_icgraph.md5  classhqp_1_1HierarchicalQP_afd188fe690d31e139bdb9ed95b8acf01_cgraph.map  classhqp_1_1HierarchicalQP_afd188fe690d31e139bdb9ed95b8acf01_cgraph.md5  classhqp_1_1HierarchicalQP_afd188fe690d31e139bdb9ed95b8acf01_icgraph.map  classhqp_1_1HierarchicalQP_afd188fe690d31e139bdb9ed95b8acf01_icgraph.md5  classhqp_1_1SubTasks-members.html  classhqp_1_1SubTasks.html  classhqp_1_1SubTasks__coll__graph.md5  classhqp_1_1SubTasks__inherit__graph.map  classhqp_1_1SubTasks_a3189da34474844c2dd20cb83ca6bd3e0_cgraph.map  classhqp_1_1SubTasks_a3189da34474844c2dd20cb83ca6bd3e0_cgraph.md5  classhqp_1_1SubTasks_a3189da34474844c2dd20cb83ca6bd3e0_icgraph.map  (+110 more)
include/: hqp.hpp  hqp.tpp  options.hpp  task.hpp  utils.hpp
latex/: annotated.tex  classhqp_1_1HierarchicalQP.tex  classhqp_1_1HierarchicalQP_a126f16766c7f830ac0b5778a9ea4b7c2_icgraph.md5  classhqp_1_1HierarchicalQP_a292d98f5d69d3666a895d6a95e5dc6b9_cgraph.md5  classhqp_1_1HierarchicalQP_a292d98f5d69d3666a895d6a95e5dc6b9_icgraph.md5  classhqp_1_1HierarchicalQP_a7f754bcfa36f0f97fd9063ad079940e9_icgraph.md5  classhqp_1_1HierarchicalQP_aae5aaeddac67302f310f34bfa3eb66c4_cgraph.md5  classhqp_1_1HierarchicalQP_aae5aaeddac67302f310f34bfa3eb66c4_icgraph.md5  classhqp_1_1HierarchicalQP_aaf6df9e4aa247e25e1ff253bd6501028_cgraph.md5  classhqp_1_1HierarchicalQP_aaf6df9e4aa247e25e1ff253bd6501028_icgraph.md5  classhqp_1_1HierarchicalQP_adac78a9cc96e9d4f311b9ef72acd7ebd_cgraph.md5  classhqp_1_1HierarchicalQP_adac78a9cc96e9d4f311b9ef72acd7ebd_icgraph.md5  classhqp_1_1HierarchicalQP_add4448ad1c21585e607457463016a027_cgraph.md5  classhqp_1_1HierarchicalQP_add4448ad1c21585e607457463016a027_icgraph.md5  classhqp_1_1HierarchicalQP_afd188fe690d31e139bdb9ed95b8acf01_cgraph.md5  classhqp_1_1HierarchicalQP_afd188fe690d31e139bdb9ed95b8acf01_icgraph.md5  classhqp_1_1SubTasks.tex  classhqp_1_1SubTasks__inherit__graph.md5  classhqp_1_1SubTasks_a3189da34474844c2dd20cb83ca6bd3e0_cgraph.md5  classhqp_1_1SubTasks_a3189da34474844c2dd20cb83ca6bd3e0_icgraph.md5  classhqp_1_1SubTasks_ab921fb5342842ae371b33a839d3a76e7_cgraph.md5  classhqp_1_1Task.tex  classhqp_1_1Task0.tex  classhqp_1_1Task0__inherit__graph.md5  classhqp_1_1Task1.tex  classhqp_1_1Task2.tex  (+51 more)
python/: CMakeLists.txt  pybind_hqp.cpp  requirements.txt  setup.py  task_example.py  test_pyhqp.py
tests/: 00_basic_select.cpp  01_metric_swap.cpp  02_compare_solvers.cpp  03_set_stack.cpp  04_random_problem.cpp  05_lex_slacks.cpp  06_timing_stats.cpp  07_template_demo.cpp  08_warm_start.cpp  CMakeLists.txt  lexls_interface.hpp  library.cpp  library.hpp  test0.cpp  test1.cpp
(+167 files in other folders)
